Bug 90609 - FILEOPEN XML XLSX causes Calc to terminate
Summary: FILEOPEN XML XLSX causes Calc to terminate
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.2.2 release
Hardware: All All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.1.0 target:5.0.1 target:4.4.6
Keywords: haveBacktrace
: 93381 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-04-14 09:53 UTC by ychurov
Modified: 2016-10-25 19:23 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
XML XLSX file from sharepoint (51.96 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2015-04-14 09:53 UTC, ychurov
Details
backtrace.txt (5.66 KB, text/plain)
2015-04-17 07:02 UTC, ychurov
Details
Another backtrace (7.35 KB, text/plain)
2015-04-18 12:57 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ychurov 2015-04-14 09:53:46 UTC
Created attachment 114781 [details]
XML XLSX file from sharepoint

When open attached file Calc emergency terminate. In LibreOffice 4.3 opens correctly without breakdown.
Comment 1 raal 2015-04-14 15:49:56 UTC
I can not confirm with LO 4.4.2, win7. No crash, I can open file without problem.
Comment 2 ychurov 2015-04-15 07:28:49 UTC
(In reply to raal from comment #1)
> I can not confirm with LO 4.4.2, win7. No crash, I can open file without
> problem.

Do you have clean install or upgrade from 4.3?
Comment 3 ychurov 2015-04-15 08:22:09 UTC
I have Win7 x86, Server 2012R2, Win8.1 x86_64 - can't open file - Calc crash. What can I send: log, dump etc?
Comment 4 raal 2015-04-15 12:57:51 UTC
(In reply to ychurov from comment #3)
> I have Win7 x86, Server 2012R2, Win8.1 x86_64 - can't open file - Calc
> crash. What can I send: log, dump etc?

Hello,
If possible, please follow the instructions provided at this link < https://wiki.documentfoundation.org/How_to_get_a_backtrace_with_WinDbg > and submit a backtrace. That way a developer can look into the underlying reason of the crash.

To be certain the reported issue is not related to corruption in the user profile, could you rename this LibreOffice user directory ( see https://wiki.documentfoundation.org/UserProfile#Default_location or http://ask.libreoffice.org/en/question/903/where-are-the-libreoffice-data-profile-files/ ) and re-test?
Comment 5 ychurov 2015-04-17 07:02:03 UTC
Created attachment 114850 [details]
backtrace.txt
Comment 6 ychurov 2015-04-17 07:03:36 UTC
I deleted user profile and create backtrace.txt (attached).
Comment 7 Robinson Tryon (qubit) 2015-04-17 19:42:37 UTC
(In reply to ychurov from comment #0)
> Created attachment 114781 [details]
> XML XLSX file from sharepoint
> 
> When open attached file Calc emergency terminate. In LibreOffice 4.3 opens
> correctly without breakdown.

TESTING with 4.4.2.2 + Ubuntu 14.04
NOREPRO -- no crash occurs.

Summary -> (hard to repro)
Comment 8 Buovjaga 2015-04-18 12:57:12 UTC
Created attachment 114879 [details]
Another backtrace

Win 7 Pro 64-bit, Version: 4.4.2.2
Build ID: c4c7d32d0d49397cad38d62472b0bc8acff48dd6
Locale: fi_FI
Comment 9 MM 2015-04-18 17:42:51 UTC
Well, it does crash with v4.4.3.1 under mint 17.1 x64.
When i reset my profile, it doesn't crash anymore for a number of times. Then suddenly it crashes again, without touching the config. And after a number of crashes it might load the file again. Strange....
Comment 10 Caolán McNamara 2015-07-24 12:21:09 UTC
in dbgutil mode I get an assert about unlocked SolarMutex during threading, and the xlsx import runs various threads for various input streams, so that's v. plausible as the problem and the randomness of the failure for others.
Comment 11 Commit Notification 2015-07-24 13:02:29 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=442b788bc80e20783bdb881aa0cbbc253f1a47b0

Resolves: tdf#90609 SolarMutex assert on threaded load

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2015-07-27 08:13:37 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=950c5ad52c489f78d2bf55c5f4232273491a4e9c&h=libreoffice-5-0

Resolves: tdf#90609 SolarMutex assert on threaded load

It will be available in 5.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2015-07-28 15:46:33 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f7413bed0af236e3a15a5d14ed4045f55dea6d0f&h=libreoffice-4-4

Resolves: tdf#90609 SolarMutex assert on threaded load

It will be available in 4.4.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 MM 2015-08-12 21:35:59 UTC
*** Bug 93381 has been marked as a duplicate of this bug. ***