Resolves: tdf#90609 SolarMutex assert on threaded load

Change-Id: I81a784ab506d0d3ae266d7341b8ff7a163dcd8d2
(cherry picked from commit 442b788bc80e20783bdb881aa0cbbc253f1a47b0)
Reviewed-on: https://gerrit.libreoffice.org/17328
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>